objects/jiffle__Registration__c.object
<CustomObject>
    <fields>
        <fullName>jiffle__Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>jiffle__Attendee__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>jiffle__Contact_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Event__c</fullName>
        <formula>jiffle__Session__r.jiffle__Jifflenow_Event__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Group_Registration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Registration</label>
        <referenceTo>jiffle__Group_Registration__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Is_Session_Requestor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Session Requestor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Nomination_UUID__c</fullName>
        <label>Nomination UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Registrant_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + jiffle__Attendee__r.Id , jiffle__Attendee__r.jiffle__Attendee_First_Name__c +&quot; &quot;+jiffle__Attendee__r.jiffle__Attendee_Last_Name__c ,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registrant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Registrant_Status__c</fullName>
        <label>Registrant Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Registration_Type__c</fullName>
        <formula>jiffle__Session__r.jiffle__Registration_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Session_Date__c</fullName>
        <formula>jiffle__Session__r.jiffle__Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jiffle__Session_Requestor__c</fullName>
        <formula>jiffle__Group_Registration__r.jiffle__Requestor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Session_Status__c</fullName>
        <formula>TEXT(jiffle__Session__r.jiffle__Session_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Session__c</fullName>
        <label>Session</label>
        <referenceTo>jiffle__Session__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>jiffle__Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__User_Type__c</fullName>
        <label>User Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Registration</label>
    <listViews>
        <fullName>jiffle__All</fullName>
        <columns>NAME</columns>
        <columns>jiffle__Contact__c</columns>
        <columns>jiffle__Lead__c</columns>
        <columns>jiffle__Registrant_Name__c</columns>
        <columns>jiffle__Registrant_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REG-{000000}</displayFormat>
        <label>Registrant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>